--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   </head>
   <body>
+    <p>TEST</p>
     <div class="navbar">
       <div class="logo">
         <i class="material-icons">view_headline</i>
