--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <p>SOMETHING ELSE</p>
-    <p>TEST</p>
+    <p>TESTS</p>
     <div class="navbar">
       <div class="logo">
         <i class="material-icons">view_headline</i>
