modified video thumbnail

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
   </head>
   <body>
-    <p>SOMETHING ELSE</p>
-    <p>TESTS</p>
+   
     <div class="navbar">
       <div class="logo">
         <i class="material-icons">view_headline</i>
@@ -329,19 +328,19 @@
           </div>
           <div class="video">
             <div class="thumbnail">
-              <img src="https://i.ytimg.com/vi/yNF4bCwKVug/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBQwbDUFV9VmqESFxMaK9NJkx-hgw" alt="" />
+              <img src="https://i.ytimg.com/vi/myIYlOZ0bK4/hqdefault.jpg?sqp=-oaymwE2COADEI4CSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB_gSAAugCigIMCAAQARhlIFcoUzAP&rs=AOn4CLAY_Mr88Ps1MoLfgkF2GQBlgVIjsA" alt="" />
             </div>
             <div class="details">
               <div class="profile">
-                <img src="https://yt3.ggpht.com/ytc/AIdro_nunNV5YlMunnwrWbKtDYaLgvwFOYQ0QLsxdQQ3yNmPYGv2ZPw5PqmaT9eio-EE=s68-c-k-c0x00ffffff-no-rj"/>
+                <img src="https://yt3.ggpht.com/fetZ2NadX0iwAx0gFbDsNx6VhEeKEhIz8FEeTwnwhVAr2YuzRfVlo2UgErdT72mhQI1thxV_NcU=s68-c-k-c0x00ffffff-no-rj"/>
                 <div class="video-details">
-                  <p>Sdumosgud' Snays' Identical twin borther</p>
+                  <p>Good Friday With Skhumba and Ndumiso 2 [KAYA FM]</p>
                   <div class="posted-by">
-                    <span>William Willy</span>
+                    <span>Laughing with Greg</span>
                     <div class="views-date">
-                      <span>1.4M views</span>
+                      <span>54K views</span>
                       <span>.</span>
-                      <span>1 year ago</span>
+                      <span>6 months ago</span>
                     </div>
                   </div>
                 </div>
